--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "lint": "eslint --fix Config/*.js Controllers/*.js Middleware/*.js Models/*.js Routes/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,9 @@
     "mongoose": "^6.1.3"
   },
   "devDependencies": {
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "nodemon": "^2.0.15"
   }
 }
